# AoC

./: CMakeLists.txt  README.md
AoC/Day/: Day.cpp  Day.h
AoC/MD5/: MD5.cpp  MD5.h
AoC2015/: AoC2015.cpp  AoC2015.h  CMakeLists.txt
AoC2015/Day01/: Day01.cpp  Day01.h
AoC2015/Day02/: Day02.cpp  Day02.h
AoC2015/Day03/: Day03.cpp  Day03.h
AoC2015/Day04/: Day04.cpp  Day04.h
AoC2015/Day05/: Day05.cpp  Day05.h
AoC2015/Day06/: Day06.cpp  Day06.h
AoC2015/Day07/: Day07.cpp  Day07.h
AoC2015/Day08/: Day08.cpp  Day08.h
AoC2015/Day09/: Day09.cpp  Day09.h
AoC2015/Day10/: Day10.cpp  Day10.h
AoC2015/Day11/: Day11.cpp  Day11.h
AoC2015/Day12/: Day12.cpp  Day12.h
AoC2015/Day13/: Day13.cpp  Day13.h
AoC2015/Day14/: Day14.cpp  Day14.h
AoC2015/Day15/: Day15.cpp  Day15.h
AoC2015/Day16/: Day16.cpp  Day16.h
AoC2015/Day17/: Day17.cpp  Day17.h
AoC2015/Day18/: Day18.cpp  Day18.h
AoC2015/Day19/: Day19.cpp  Day19.h
AoC2015/Day20/: Day20.cpp  Day20.h
AoC2015/Day21/: Day21.cpp  Day21.h
AoC2015/Day22/: Day22.cpp  Day22.h  Day22.txt
AoC2015/Day23/: Day23.cpp  Day23.h
AoC2015/Day24/: Step1.txt
AoC2015/Day25/: Day25.cpp  Day25.h
AoC2019/: AoC2019.cpp  AoC2019.h  CMakeLists.txt
AoC2019/Day01/: Day01.cpp  Day01.h
AoC2019/Day02/: Day02.cpp  Day02.h
AoC2019/Day03/: Day03.cpp  Day03.h
AoC2019/Day04/: Day04.cpp  Day04.h
AoC2019/Day05/: Day05.cpp  Day05.h
AoC2019/Day06/: Day06.cpp  Day06.h
AoC2019/Day07/: Day07.cpp  Day07.h
AoC2019/Day08/: Day08.cpp  Day08.h
AoC2019/Day09/: Day09.cpp  Day09.h
AoC2019/Day10/: Day10.cpp  Day10.h
AoC2019/Day11/: Day11.cpp  Day11.h
AoC2019/Day12/: Day12.cpp  Day12.h
AoC2019/Day12/Moon/: Moon.h
AoC2019/Day13/: Day13.cpp  Day13.h
AoC2019/Day14/: Day14.cpp  Day14.h
AoC2019/Day15/: Day15.cpp  Day15.h
AoC2019/Day16/: Day16.cpp  Day16.h
AoC2019/Day17/: Day17.cpp  Day17.h
AoC2019/IntCodeCPU/: IntCodeCPU.cpp  IntCodeCPU.h
AoC2021/: AoC2021.cpp  AoC2021.h  CMakeLists.txt
AoC2021/Day01/: Day01.cpp  Day01.h
AoC2021/Day02/: Day02.cpp  Day02.h
AoC2021/Day03/: Day03.cpp  Day03.h
AoC2021/Day04/: Day04.cpp  Day04.h
AoC2021/Day05/: Day05.cpp  Day05.h
AoC2021/Day06/: Day06.cpp  Day06.h
AoC2021/Day07/: Day07.cpp  Day07.h
AoC2021/Day08/: Day08.cpp  Day08.h
AoC2021/Day09/: Day09.cpp  Day09.h
AoC2021/Day10/: Day10.cpp  Day10.h
AoC2021/Day11/: Day11.cpp  Day11.h
AoC2021/Day12/: Day12.cpp  Day12.h
AoC2021/Day13/: Day13.cpp  Day13.h
AoC2021/Day14/: Day14.cpp  Day14.h
AoC2021/Day15/: Day15.cpp  Day15.h
AoC2021/Day16/: Day16.cpp  Day16.h
AoC2021/Day17/: Day17.cpp  Day17.h
AoC2021/Day18/: Day18.cpp  Day18.h
AoC2021/Day19/: Day19.cpp  Day19.h
AoC2021/Day20/: Day20.cpp  Day20.h
AoC2021/Day21/: Day21.cpp  Day21.h
AoC2021/Day22/: Day22.cpp  Day22.h
AoC2021/Day23/: Day23.cpp  Day23.h
AoC2021/Day24/: Step2.txt
AoC2021/Day25/: Day25.cpp  Day25.h
AoC2022/: AoC2022.cpp  AoC2022.h  CMakeLists.txt
AoC2022/Day01/: Day01.cpp  Day01.h
AoC2022/Day02/: Day02.cpp  Day02.h
AoC2022/Day03/: Day03.cpp  Day03.h
AoC2022/Day04/: Day04.cpp  Day04.h
AoC2022/Day05/: Day05.cpp  Day05.h
AoC2022/Day06/: Day06.cpp  Day06.h
AoC2022/Day07/: Day07.cpp  Day07.h
AoC2022/Day08/: Day08.cpp  Day08.h
AoC2022/Day09/: Day09.h
AoC2022/Day10/: Day10.cpp
AoC2022/Day11/: Day11.cpp
AoC2022/Day12/: Day12.cpp  Day12.h
AoC2022/Day13/: Day13.cpp
AoC2022/Day14/: Day14.h
AoC2022/Day15/: Day15.cpp  Day15.h
AoC2022/Day16/: Day16.cpp  Day16.h
AoC2023/: AoC2023.cpp  AoC2023.h  CMakeLists.txt
AoC2023/Day01/: Day01.cpp  Day01.h
AoC2023/Day02/: Day02.cpp  Day02.h
AoC2023/Day03/: Day03.cpp  Day03.h
AoC2023/Day04/: Day04.cpp  Day04.h
AoC2023/Day05/: Day05.cpp  Day05.h
AoC2023/Day06/: Day06.cpp  Day06.h
AoC2023/Day07/: Day07.cpp  Day07.h
AoC2023/Day08/: Day08.cpp  Day08.h
AoC2023/Day09/: Day09.cpp  Day09.h
AoC2023/Day10/: Day10.cpp  Day10.h
AoC2023/Day11/: Day11.cpp  Day11.h
AoC2023/Day12/: Day12.cpp  Day12.h
AoC2023/Day13/: Day13.cpp  Day13.h
AoC2023/Day14/: Day14.cpp  Day14.h
AoC2023/Day15/: Day15.cpp  Day15.h
AoC2023/Day16/: Day16.cpp  Day16.h
AoC2023/Day17/: Day17.cpp  Day17.h
AoC2023/Day18/: Day18.cpp  Day18.h
AoC2023/Day19/: Day19.cpp  Day19.h
AoC2023/Day20/: Day20.cpp  Day20.h
AoC2023/Day21/: Day21.cpp  Day21.h
AoC2023/Day22/: Day22.cpp  Day22.h
AoC2023/Day23/: Day23.cpp  Day23.h
AoC2023/Day24/: Day24.cpp  Day24.h
AoC2023/Day25/: Day25.cpp  Day25.h
AoC2024/: AoC2024.cpp  AoC2024.h  CMakeLists.txt
AoC2024/Day/: Day.cpp  Day.h
AoC2024/Day01/: Day01.cpp  Day01.h
AoC2024/Day02/: Day02.cpp  Day02.h
AoC2024/Day03/: Day03.cpp  Day03.h
AoC2024/Day04/: Day04.cpp  Day04.h
AoC2024/Day05/: Day05.cpp  Day05.h
AoC2024/Day06/: Day06.cpp  Day06.h
AoC2024/Day07/: Day07.cpp  Day07.h  Day07.txt
AoC2024/Day08/: Day08.cpp  Day08.h
AoC2024/Day09/: Day09.cpp  Day09.h
AoC2024/Day10/: Day10.cpp  Day10.h
AoC2024/Day11/: Day11.cpp  Day11.h
AoC2024/Day12/: Day12.cpp  Day12.h
AoC2024/Day13/: Day13.cpp  Day13.h
AoC2024/Day14/: Day14.cpp  Day14.h
AoC2024/Day15/: Day15.cpp  Day15.h
AoC2024/Day16/: Day16.cpp  Day16.h
AoC2024/Day17/: Day17.cpp  Day17.h
AoC2024/Day18/: Day18.cpp  Day18.h
AoC2024/Day19/: Day19.cpp  Day19.h
AoC2024/Day20/: Day20.cpp  Day20.h
AoC2024/Day21/: Day21.cpp  Day21.h
AoC2024/Day22/: Day22.cpp  Day22.h
AoC2024/Day23/: Day23.cpp  Day23.h
AoC2024/Day24/: Day24.cpp  Day24.h
AoC2024/Day25/: Day25.cpp  Day25.h
AoC2025/: AoC2025.cpp  AoC2025.h  CMakeLists.txt
AoC2025/Day01/: Day01.cpp  Day01.h
AoC2025/Day02/: Day02.cpp  Day02.h
AoC2025/Day03/: Day03.cpp  Day03.h
AoC2025/Day04/: Day04.cpp  Day04.h
AoC2025/Day05/: Day05.cpp  Day05.h
AoC2025/Day06/: Day06.cpp  Day06.h
AoC2025/Day07/: Day07.cpp  Day07.h
AoC2025/Day08/: Day08.cpp  Day08.h
AoC2025/Day09/: Day09.cpp  Day09.h
AoC2025/Day10/: Day10 (2).txt  Day10.cpp  Day10.h  bad.txt  good.txt
AoC2025/Day11/: Day11.cpp  Day11.h
AoC2025/Day12/: Day12.cpp  Day12.h
Helpers/: GaussianElimination.cpp  GaussianElimination.h  Helpers.cpp  Helpers.h
(+21 files in other folders)
